# guns-smt-website

./: .gitignore  app.py  pyproject.toml
guns/: __init__.py
guns/static/scripts/: hamburger-menu.js
guns/static/styles/: index-stylesheet.css
guns/templates/: index.html
guns/templates/emails/: call_us_form.txt
guns/templates/views/: index.html
guns/utils/: email.py
guns/utils/emails/: email_communication.py  email_connection.py
guns/views/: index.py
