[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Luan Henzo de Almeida", email = "43920813+luansinh0@users.noreply.github.com"},
]
dependencies = [
    "flask~=2.0",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
